# cflib

./: .cmake-format.yaml  .cmake-format.yml  .gitignore  CMakeLists.txt  CNAME  COPYING  Dockerfile  Dockerfile.build  MODULES  README  README.md  cflib.pro  include.pri
cflib/: CMakeLists.txt
cflib/crypt/: .gitignore  CMakeLists.txt  botan.patch  crypt.pro  patch_botan.sh  tlsclient.cpp  tlsclient.h  tlscredentials.cpp  tlscredentials.h  tlsserver.cpp  tlsserver.h  tlssessions.cpp  tlssessions.h  tlsstream.h  util.cpp  util.h
cflib/crypt/botan/: asn1_time.cpp  botan.pri  build.h  poly1305.cpp  x509_obj.cpp  x509path.cpp
cflib/crypt/botan/internal/: def_pk_ops.cpp  donna.cpp  msg_client_kex.cpp  tls_handshake_io.h  tls_handshake_state.cpp  tls_record.cpp
cflib/crypt/botan/linux/: botan_all.cpp  botan_all.h  botan_all_aesni.cpp  botan_all_avx2.cpp  botan_all_internal.h  botan_all_rdrand.cpp
cflib/crypt/botan/linux32/: botan_all.cpp  botan_all.h  botan_all_internal.h  botan_all_rdrand.cpp  botan_all_sse2.cpp
cflib/crypt/botan/macosx/: botan_all.cpp  botan_all.h
cflib/crypt/botan/osx/: botan_all.cpp  botan_all.h  botan_all_avx2.cpp  botan_all_internal.h  botan_all_ssse3.cpp
cflib/crypt/crypt_test/: CMakeLists.txt  botan  certs.h  create_certs.sh  crypt_test.cpp  crypt_test.pro  openssl.cnf  tls_test.cpp  tlscredentials_test.cpp  tlsserver_test.cpp  util_test.cpp
cflib/crypt/impl/: botanhelper.h  tls12policy.h
cflib/crypt/pwhash/: CMakeLists.txt  main.cpp  pwhash.pro
cflib/dao/: CMakeLists.txt  config.cpp  config.h  configpsql.cpp  configpsql.h  dao.pro  version.cpp  version.h
cflib/dao/psql/: configpsql.cpp  configpsql.h
cflib/db/: CMakeLists.txt  db.cpp  db.h  db.pro  dbconfig.cpp  dbconfig.h  dbconfigpsql.cpp  dbconfigpsql.h  psql.cpp  psql.h  schema.cpp  schema.h
cflib/db/db_test/: CMakeLists.txt  CMakelists.txt  db_test.pro  db_test.qrc  psql_test.cpp  schema.sql  schema_test.cpp  structure_test.cpp
cflib/db/impl/: dummy.h
cflib/db/migrationmoped/: CMakeLists.txt  main.cpp  migrationmoped.pro
cflib/db/migrationmopped/: main.cpp  migrationmopped.pro
cflib/db/psql/: dbconfigpsql.cpp  dbconfigpsql.h  psql.cpp  psql.h  schema.cpp  schema.h
cflib/net/: CMakeLists.txt  apiserver.cpp  apiserver.h  dns.cpp  dns.h  fileserver.cpp  fileserver.h  forwardserver.cpp  forwardserver.h  httpauth.cpp  httpauth.h  httpclient.cpp  httpclient.h  httprequest.cpp  httprequest.h  httpserver.cpp  httpserver.h  jsservice.cpp  jsservice.h  kafkaconnector.cpp  kafkaconnector.h  logservice.cpp  logservice.h  net.pro  redirectserver.cpp  redirectserver.h  request.cpp  request.h  requesthandler.h  requestlog.cpp  requestlog.h  rmiserver.cpp  rmiserver.h  rmiservice.cpp  rmiservice.h  rsig.cpp  rsig.h  server.cpp  server.h  tcpconn.cpp  (+11 more)
cflib/net/impl/: httpthread.cpp  httpthread.h  kafkaconnection.cpp  kafkaconnection.h  kafkaconnectorimpl.cpp  kafkaconnectorimpl.h  kafkafetch.h  kafkafetchconnection.cpp  kafkafetchconnection.h  kafkagroup.h  kafkagroupconnection.cpp  kafkagroupconnection.h  kafkametadata.h  kafkametadataconnection.cpp  kafkametadataconnection.h  kafkaoffset.h  kafkaoffsetconnection.cpp  kafkaoffsetconnection.h  kafkaproduce.h  kafkaproduceconnection.cpp  kafkaproduceconnection.h  kafkaraw.cpp  kafkaraw.h  kafkarequests.cpp  kafkarequests.h  requestparser.cpp  requestparser.h  rmiserverbase.cpp  rmiserverbase.h  tcpconndata.cpp  tcpconndata.h  tcpconninitializer.h  tcpmanagerimpl.cpp  tcpmanagerimpl.h  tlsthread.cpp  tlsthread.h
cflib/net/net_test/: CMakeLists.txt  gen_ber_test.cpp  gentest.h  http_test.cpp  net_test.pro  tcp_test.cpp  typeinfo_test.cpp
cflib/net/net_test/test/: gentest2.h
cflib/serialize/: CMakeLists.txt  asn1dump.cpp  asn1dump.h  common.h  serialize.h  serialize.pro  serializeber.h  serializejs.h  serializetypeinfo.cpp  serializetypeinfo.h  tribool.cpp  tribool.h  util.h
cflib/serialize/asn1dump/: CMakeLists.txt  asn1dump.pro  main.cpp
cflib/serialize/impl/: ber.h  js.h  readandcall.h  registerclass.cpp  registerclass.h  serializebaseber.h  serializebasejs.h  serializeberimpl.h  serializejsimpl.h  serializetypeinfoimpl.h  sometobytearray.h
cflib/serialize/ser/: CMakeLists.txt  codegen.cpp  codegen.h  headerparser.cpp  headerparser.h  main.cpp  ser.pro
cflib/serialize/serialize_test/: CMakeLists.txt  dynamic.h  dynamic_test.cpp  gen_ber_test.cpp  gen_js_test.cpp  gentest.h  serialize_test.pro  serializeber_test.cpp  serializejs_test.cpp  test.h  typeinfo_test.cpp  util_test.cpp
cflib/serialize/serialize_test/test/: gentest2.h
cflib/util/: CMakeLists.txt  cmdline.cpp  cmdline.h  delegate.h  evtimer.cpp  evtimer.h  functor.h  hex.h  libev.cpp  libev.h  log.cpp  log.h  mailer.cpp  mailer.h  sig.h  tcpserver.cpp  tcpserver.h  test.cpp  test.h  threadfifo.h  threadstats.h  threadverify.cpp  threadverify.h  timer.cpp  timer.h  timeshifter.cpp  timeshifter.h  tuplecompare.h  unixsignal.cpp  unixsignal.h  util.cpp  util.h  util.pro
cflib/util/filefinder/: CMakeLists.txt  filefinder.pro  main.cpp
cflib/util/gitversion/: CMakeLists.txt  gitversion.pro  main.cpp
cflib/util/impl/: generate_templates.pl  libevimpl.h  logformat.h  threadverifyimpl.cpp  threadverifyimpl.h  tuplecompare.h  util_mac.mm
cflib/util/jscombiner/: CMakeLists.txt  jscombiner.pro  main.cpp
cflib/util/libev/: libev.c  libev.h
cflib/util/util_test/: CMakeLists.txt  sig_test.cpp  threadfifo_test.cpp  util_test.cpp  util_test.pro
cmake/: ApplyConfigFiles.cmake  Build.cmake  CompileConfig.cmake  DependencyConfig.cmake  FindBotan.cmake  ProjectConfig.cmake  SerializableGenerator.cmake  Util.cmake
examples/: CMakeLists.txt
examples/getssl/: CMakeLists.txt  getssl.pro  letsencrypt.cpp  letsencrypt.h  main.cpp
examples/webchat/: CMakeLists.txt  dao.h  infoservice.cpp  infoservice.h  main.cpp  webchat.pro
examples/webchat/htdocs/: index.html
examples/webchat/htdocs/js/: chat.js  main.js
examples/webchatclient/: CMakeLists.txt  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp  webchatclient.pro
js/: dom.js  dom.mjs  loader.js
pch/: core.h  (+12 more)
(+60 files in other folders)
